--- a/02_connectance_degree.ipynb
+++ b/02_connectance_degree.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,6 +76,160 @@
       "┌ Info: Precompiling Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80]\n",
       "└ @ Base loading.jl:1242\n"
      ]
+    },
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600\" height=\"400\" viewBox=\"0 0 2400 1600\">\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip1100\">\n",
+       "    <rect x=\"0\" y=\"0\" width=\"2400\" height=\"1600\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<polygon clip-path=\"url(#clip1100)\" points=\"\n",
+       "0,1600 2400,1600 2400,0 0,0 \n",
+       "  \" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip1101\">\n",
+       "    <rect x=\"480\" y=\"0\" width=\"1681\" height=\"1600\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<polygon clip-path=\"url(#clip1100)\" points=\"\n",
+       "153.898,1487.47 2352.76,1487.47 2352.76,47.2441 153.898,47.2441 \n",
+       "  \" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<defs>\n",
+       "  <clipPath id=\"clip1102\">\n",
+       "    <rect x=\"153\" y=\"47\" width=\"2200\" height=\"1441\"/>\n",
+       "  </clipPath>\n",
+       "</defs>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  195.176,1487.47 195.176,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  719.013,1487.47 719.013,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  1242.85,1487.47 1242.85,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  1766.69,1487.47 1766.69,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  2290.52,1487.47 2290.52,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  153.898,1454.23 2352.76,1454.23 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  153.898,1171.92 2352.76,1171.92 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  153.898,889.61 2352.76,889.61 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  153.898,607.297 2352.76,607.297 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#000000; stroke-width:2; stroke-opacity:0.1; fill:none\" points=\"\n",
+       "  153.898,324.985 2352.76,324.985 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  153.898,1487.47 2352.76,1487.47 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  153.898,1487.47 153.898,47.2441 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  195.176,1487.47 195.176,1465.87 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  719.013,1487.47 719.013,1465.87 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1242.85,1487.47 1242.85,1465.87 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1766.69,1487.47 1766.69,1465.87 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  2290.52,1487.47 2290.52,1465.87 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  153.898,1454.23 186.881,1454.23 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  153.898,1171.92 186.881,1171.92 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  153.898,889.61 186.881,889.61 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  153.898,607.297 186.881,607.297 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  153.898,324.985 186.881,324.985 \n",
+       "  \"/>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 195.176, 1541.47)\" x=\"195.176\" y=\"1541.47\">0</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 719.013, 1541.47)\" x=\"719.013\" y=\"1541.47\">25</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 1242.85, 1541.47)\" x=\"1242.85\" y=\"1541.47\">50</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 1766.69, 1541.47)\" x=\"1766.69\" y=\"1541.47\">75</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:middle;\" transform=\"rotate(0, 2290.52, 1541.47)\" x=\"2290.52\" y=\"1541.47\">100</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 129.898, 1471.73)\" x=\"129.898\" y=\"1471.73\">0.0</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 129.898, 1189.42)\" x=\"129.898\" y=\"1189.42\">0.2</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 129.898, 907.11)\" x=\"129.898\" y=\"907.11\">0.4</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 129.898, 624.797)\" x=\"129.898\" y=\"624.797\">0.6</text>\n",
+       "</g>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:end;\" transform=\"rotate(0, 129.898, 342.485)\" x=\"129.898\" y=\"342.485\">0.8</text>\n",
+       "</g>\n",
+       "<polyline clip-path=\"url(#clip1102)\" style=\"stroke:#009af9; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  216.13,509.518 237.083,972.1 258.037,1044.69 278.99,1330.09 299.944,691.276 320.897,372.621 341.851,1371.92 362.804,234.524 383.758,295.06 404.711,680.55 \n",
+       "  425.665,109.464 446.618,1238.53 467.572,1093.36 488.525,804.253 509.478,1264.96 530.432,1098.21 551.385,88.0053 572.339,482.555 593.292,257.12 614.246,1304.2 \n",
+       "  635.199,1378.86 656.153,493.029 677.106,1241.03 698.06,272.722 719.013,1419.69 739.967,1445.94 760.92,761.117 781.874,281.755 802.827,709.816 823.781,268.801 \n",
+       "  844.734,263.762 865.688,694.016 886.641,1131.6 907.595,147.541 928.548,1434.67 949.502,701.132 970.455,506.667 991.408,677.059 1012.36,410.395 1033.32,883.1 \n",
+       "  1054.27,1091.75 1075.22,262.273 1096.18,385.237 1117.13,132.371 1138.08,612.56 1159.04,1098.51 1179.99,147.146 1200.94,1031.37 1221.9,414.32 1242.85,1266.94 \n",
+       "  1263.8,1446.71 1284.76,1318.67 1305.71,92.5126 1326.66,982.58 1347.62,500.857 1368.57,1018.76 1389.52,855.863 1410.48,1037.61 1431.43,657.642 1452.38,811.231 \n",
+       "  1473.34,404.472 1494.29,642.695 1515.25,883.01 1536.2,1355.66 1557.15,1392.24 1578.11,503.595 1599.06,854.021 1620.01,179.141 1640.97,413.07 1661.92,947.112 \n",
+       "  1682.87,1311.38 1703.83,537.362 1724.78,90.7084 1745.73,714.382 1766.69,720.972 1787.64,613.758 1808.59,246.579 1829.55,1151.61 1850.5,978.461 1871.45,166.242 \n",
+       "  1892.41,177.22 1913.36,1045.6 1934.31,989.502 1955.27,838.1 1976.22,830.642 1997.18,886.233 2018.13,1143.77 2039.08,785.664 2060.04,273.654 2080.99,757.731 \n",
+       "  2101.94,1096.15 2122.9,115.717 2143.85,624.465 2164.8,403.454 2185.76,416.173 2206.71,581.685 2227.66,1393.22 2248.62,1155.09 2269.57,1326.29 2290.52,1390.79 \n",
+       "  \n",
+       "  \"/>\n",
+       "<polygon clip-path=\"url(#clip1100)\" points=\"\n",
+       "1989.93,251.724 2280.76,251.724 2280.76,130.764 1989.93,130.764 \n",
+       "  \" fill=\"#ffffff\" fill-rule=\"evenodd\" fill-opacity=\"1\"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#000000; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  1989.93,251.724 2280.76,251.724 2280.76,130.764 1989.93,130.764 1989.93,251.724 \n",
+       "  \"/>\n",
+       "<polyline clip-path=\"url(#clip1100)\" style=\"stroke:#009af9; stroke-width:4; stroke-opacity:1; fill:none\" points=\"\n",
+       "  2013.93,191.244 2157.93,191.244 \n",
+       "  \"/>\n",
+       "<g clip-path=\"url(#clip1100)\">\n",
+       "<text style=\"fill:#000000; fill-opacity:1; font-family:Arial,Helvetica Neue,Helvetica,sans-serif; font-size:48px; text-anchor:start;\" transform=\"rotate(0, 2181.93, 208.744)\" x=\"2181.93\" y=\"208.744\">y1</text>\n",
+       "</g>\n",
+       "</svg>\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
