--- a/00_installation.ipynb
+++ b/00_installation.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first step is to load the package to manipulate packages (this seems convoluted, and it is, but just do it). In brief, *Julia* uses a much more modern package management system than many other programming environments, and all of these extra streps ensure that we all work from the same versions of the same packages."
+    "The first step is to load the package to manipulate packages (this seems convoluted, and it is, but just do it). In brief, *Julia* uses a much more modern package management system than many other programming environments, and all of these extra streps ensure that we all work from the same versions of the same packages.\n",
+    "\n",
+    "The *Julia* package manager has an [extensive documentation](https://julialang.github.io/Pkg.jl/v1/index.html), which is a little bit technical but covers everything it can do."
    ]
   },
   {
