Update README and 00

--- a/00_installation.ipynb
+++ b/00_installation.ipynb
@@ -29,7 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Pkg"
+    "import Pkg\n",
+    "#Pkg.Registry.update(\"JuliaPro\") # This line is required if we are using JuliaBox only"
    ]
   },
   {
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,9 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n",
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m git-repo `https://github.com/JuliaRegistries/General.git`\n",
+      "\u001b[?25l\u001b[2K\u001b[?25h"
+     ]
+    }
+   ],
    "source": [
     "Pkg.instantiate()"
    ]
@@ -81,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,8 +105,8 @@
       "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m Rmath ───────────→ `~/.julia/packages/Rmath/Py9gH/deps/build.log`\n",
       "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m Conda ───────────→ `~/.julia/packages/Conda/kLXeC/deps/build.log`\n",
       "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m GR ──────────────→ `~/.julia/packages/GR/ZI5OE/deps/build.log`\n",
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m FFMPEG ──────────→ `~/.julia/packages/FFMPEG/9JQpZ/deps/build.log`\n",
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m Plots ───────────→ `~/.julia/packages/Plots/h3o4c/deps/build.log`\n",
+      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m FFMPEG ──────────→ `~/.julia/packages/FFMPEG/bkWgb/deps/build.log`\n",
+      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m Plots ───────────→ `~/.julia/packages/Plots/Iuc9S/deps/build.log`\n",
       "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m ZMQ ─────────────→ `~/.julia/packages/ZMQ/ABGOx/deps/build.log`\n",
       "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m IJulia ──────────→ `~/.julia/packages/IJulia/fRegO/deps/build.log`\n"
      ]
@@ -106,7 +117,7 @@
        "false"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,21 +130,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From now on, all of our notebooks will start with `using Pkg; Pkg.activate(\".\")`, which will load our required packages."
+    "**Important:** From now on, all of our notebooks will start with `import Pkg; Pkg.activate(\".\")`, which will load our required packages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This concludes the installation section."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.0.3",
+   "display_name": "Julia 1.2.0",
    "language": "julia",
-   "name": "julia-1.0"
+   "name": "julia-1.2"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.3"
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
