comparison notes done

--- a/00_installation.ipynb
+++ b/00_installation.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "import Pkg\n",
-    "#Pkg.Registry.update(\"JuliaPro\") # This line is required if we are using JuliaBox only"
+    "Pkg.Registry.update(\"JuliaPro\") # This line is required if we are using JuliaBox only"
    ]
   },
   {
