--- a/06_nhst.ipynb
+++ b/06_nhst.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Null hypothesis significant testing"
+    "# Null hypothesis significance testing"
    ]
   },
   {
